--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "cmdk": "^1.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "dexie": "^4.2.1",
+    "dexie-react-hooks": "^4.2.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.23.24",
     "hls.js": "^1.6.13",
@@ -85,6 +87,7 @@
     "three": "^0.181.2",
     "uuid": "^13.0.0",
     "vaul": "^0.9.3",
+    "vite-plugin-pwa": "^1.2.0",
     "web-vitals": "^5.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
